--- a/build.gradle
+++ b/build.gradle
@@ -24,17 +24,24 @@ repositories {
 }
 
 dependencies {
+	// 웹
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// 롬복
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	// 개발
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	// mysql
 	implementation 'mysql:mysql-connector-java:8.0.28'
-	annotationProcessor 'org.projectlombok:lombok'
+	// 테스트
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// 유효성검사
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// 비밀번호 암호화
+	implementation 'at.favre.lib:bcrypt:0.10.2'
 }
 
 tasks.named('test') {
