--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=todoapp-develop
 
-spring.datasource.url=jdbc:mysql://localhost:3306/basic_db
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_db
 spring.datasource.username=root
 spring.datasource.password=00000000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
