--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
 	// 유효성검사
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// 비밀번호 암호화
-	implementation 'at.favre.lib:bcrypt:0.10.2'
+//	implementation 'at.favre.lib:bcrypt:0.10.2'
+	// spring security
+//	implementation("org.springframework.boot:spring-boot-starter-security")
 }
 
 tasks.named('test') {
